remove unnecessary files

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,9 @@
-API_ID=
-API_HASH=
-PHONE=
-HOST=
-BOT_ID=
-DIALOG_ID=
-FRAME_COUNT=
-SESSION=
-SS_EXPORT_DIR=
+API_ID='27868602'
+API_HASH='3b7f787bbaacbc5b2e9717d33007000c'
+PHONE='+601121713376'
+HOST='https://telegram.org/stream/BAADBQADtg0AAhqmAAFXXduuc0J5jcYC'
+BOT_ID=6437038101
+DIALOG_ID=5234153316
+FRAME_COUNT=10
+SESSION="local"
+SS_EXPORT_DIR="ss"
