feature: threading and refactoring

--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,12 @@
 API_ID=
 API_HASH=
-PHONE=
-BOT_ID=
 DIALOG_ID=
-FRAME_COUNT=
-SESSION=
-SS_EXPORT_DIR=
+FRAME_COUNT=10
+SS_EXPORT_DIR='ss'
+SESSION='local'
+SERVER_PORT='5000'
+STREAM_ENDPOINT='http://localhost:5000/stream/{message_id}'
+THREAD_MAX_WORKERS=5
+
+# Optional
+PHONE=
