weekend update, heavely on optimization

--- a/sample.env
+++ b/sample.env
@@ -7,6 +7,8 @@ SESSION='local'
 SERVER_PORT='5000'
 STREAM_ENDPOINT='http://localhost:5000/stream/{message_id}'
 THREAD_MAX_WORKERS=5
+SQLITE_URL='local.db'
+DEBUG=true
 
 # Optional
 PHONE=
