feat: add retry mechanism

--- a/sample.env
+++ b/sample.env
@@ -9,6 +9,7 @@ STREAM_ENDPOINT='http://localhost:5000/stream/{message_id}'
 THREAD_MAX_WORKERS=5
 SQLITE_URL='local.db'
 DEBUG=true
+MAX_RETRIES=5
 
 # Optional
 PHONE=
