disable advance chunk info, option to use last message id

--- a/sample.env
+++ b/sample.env
@@ -11,6 +11,8 @@ SQLITE_URL='local.db'
 DEBUG=true
 MAX_RETRIES=5
 SS_PARTIAL_RETRY=true
+USE_RELOADER=false
+USE_LAST_MESSAGE_ID=false
 
 # Optional
 PHONE=
