--- a/sample.env
+++ b/sample.env
@@ -5,7 +5,6 @@ FRAME_COUNT=10
 SS_EXPORT_DIR='ss'
 SESSION='local'
 SERVER_PORT='5000'
-STREAM_ENDPOINT='http://localhost:5000/stream/{message_id}'
 THREAD_MAX_WORKERS=5
 SQLITE_URL='local.db'
 DEBUG=true
@@ -13,6 +12,7 @@ MAX_RETRIES=5
 SS_PARTIAL_RETRY=true
 USE_RELOADER=false
 USE_LAST_MESSAGE_ID=false
+CACHE_TTL=600
 
 # Optional
 PHONE=
