--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,37 @@
-aiofiles==23.2.1
 av==12.1.0
 blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
 click==8.1.7
+decorator==4.4.2
 Flask==3.0.3
+future==1.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
 humanfriendly==10.0
 Hypercorn==0.17.3
 hyperframe==6.0.1
+idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+moviepy==1.0.3
 numpy==1.26.4
+packaging==24.0
 pillow==10.3.0
 priority==2.0.0
+proglog==0.1.10
 pyaes==1.6.1
 pyasn1==0.6.0
+pytesseract==0.3.10
 python-dotenv==1.0.1
 Quart==0.19.6
+requests==2.32.3
 rsa==4.9
+setuptools==70.0.0
 Telethon==1.35.0
+tqdm==4.66.4
+urllib3==2.2.1
 Werkzeug==3.0.3
 wsproto==1.2.0
