--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,7 @@ DIALOG_ID=
 FRAME_COUNT=10
 SS_EXPORT_DIR='ss'
 SESSION='local'
+SERVER_HOST='0.0.0.0'
 SERVER_PORT='5000'
 THREAD_MAX_WORKERS=5
 SQLITE_URL='local.db'
