--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiofiles==23.2.1
 av==12.1.0
 blinker==1.8.2
 certifi==2024.6.2
@@ -13,6 +14,8 @@ humanfriendly==10.0
 Hypercorn==0.17.3
 hyperframe==6.0.1
 idna==3.7
+imageio==2.34.1
+imageio-ffmpeg==0.5.1
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
@@ -27,6 +30,7 @@ pyasn1==0.6.0
 pytesseract==0.3.10
 python-dotenv==1.0.1
 Quart==0.19.6
+quart-cors==0.7.0
 requests==2.32.3
 rsa==4.9
 setuptools==70.0.0
