--- a/sample.env
+++ b/sample.env
@@ -14,6 +14,9 @@ SS_PARTIAL_RETRY=true
 USE_RELOADER=false
 USE_LAST_MESSAGE_ID=false
 CACHE_TTL=600
+CHUNK_SIZE=524288
+COOL_DOWN_RETRY=30
+COOL_DOWN_ERROR=10
 
 # Optional
 PHONE=
